feat(besu): block validator endpoint
